--- a/playground/src/style.css
+++ b/playground/src/style.css
@@ -26,11 +26,11 @@ body {
     position: relative;
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
 }
 
 #box {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    background-color: red;
+    width: 50px;
+    height: 50px;
+    background-color: #0b5af1;
 }
